--- a/.gitattributes
+++ b/.gitattributes
@@ -12707,6 +12707,7 @@ tests/test/tasm25ss1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tasm25ss2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tasm25ss3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tasm26.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tasm27.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tasm2a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tasm3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tasm4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
