--- a/.gitattributes
+++ b/.gitattributes
@@ -12395,6 +12395,7 @@ tests/test/cpu16/i8086/tsegofs1a.pp svn_mime_002dtype=text%2Fplain svn_eol_002ds
 tests/test/cpu16/i8086/ttasm1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cpu16/i8086/ttheap1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/cpu16/taddint1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/dots/unit6.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/dumpclass.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/dumpmethods.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/jvm/JavaClass.java svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -13856,6 +13857,10 @@ tests/test/tudots.dot.prog.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=
 tests/test/tudots.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tudots.prog.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tudots.test.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tudots2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tudots3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tudots4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tudots5.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tuglylabels1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tunaligned1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tunistr1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -13901,6 +13906,16 @@ tests/test/tx64ccnv.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uabstrcl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uchlp12.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/uchlp18.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.moredots.unit7.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.moredots.unit8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.udots.unit4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.udots.unit5.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.unit1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.unit2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.unit3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.unit4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.unit6.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/udots.unit8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/uenum2a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uenum2b.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/ugenconstraints.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
@@ -13941,6 +13956,7 @@ tests/test/ulib2a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/umaclocalprocparam3f.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/umacpas1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/umainnam.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/unit3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/units/character svnc_bugtraq_003aurl svnc_bugtraq_003alogregex
 tests/test/units/character/tgetnumericvalue.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/units/character/tgetnumericvalue2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
