arosunits: datatypes library unit
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@38986 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -1097,6 +1097,7 @@ packages/arosunits/src/asl.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=
 packages/arosunits/src/clipboard.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/arosunits/src/commodities.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/arosunits/src/cybergraphics.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/arosunits/src/datatypes.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/arosunits/src/diskfont.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/arosunits/src/exec.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/arosunits/src/gadtools.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
