--- a/.gitattributes
+++ b/.gitattributes
@@ -12633,6 +12633,7 @@ tests/test/tarray13.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tarray14.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tarray15.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tarray16.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tarray17.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tarray2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tarray3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tarray4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
