+ add support for Unicode code point constants > $FFFF; they are converted to a surrogate pair so they are in fact a UnicodeString constant + added tests
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@39123 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -13899,12 +13899,18 @@ tests/test/tweaklib2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tweaklib3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tweaklib4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twide1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/twide10.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/twide11.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/twide12.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/twide13.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/twide2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twide3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twide4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twide5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twide6.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twide7.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/twide8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/twide9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/twrstr1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twrstr2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twrstr3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
