--- a/.gitattributes
+++ b/.gitattributes
@@ -13685,6 +13685,9 @@ tests/test/tprop.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tprop1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tprop2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tpropdef.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tpushpop1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tpushpop2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tpushpop3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/trange1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/trange2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/trange3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
