--- a/.gitattributes
+++ b/.gitattributes
@@ -8345,6 +8345,20 @@ packages/uuid/examples/testuid.pp svn_mime_002dtype=text%2Fplain svn_eol_002dsty
 packages/uuid/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/uuid/src/libuuid.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/uuid/src/macuuid.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/examples/parsewebidl.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/examples/parsewebidl.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/src/webidldefs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/src/webidlparser.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/src/webidlscanner.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/src/webidltopas.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/tests/tcidlparser.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/tests/tcidlscanner.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/tests/tcwebidldefs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/tests/testidl.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/webidl/tests/testidl.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/winceunits/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/winceunits/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/winceunits/Makefile.fpc.fpcmake svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
