--- a/.gitattributes
+++ b/.gitattributes
@@ -845,6 +845,7 @@ compiler/x86/aoptx86.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=nativ
 compiler/x86/cga.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86/cgx86.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86/cpubase.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/x86/cx86innr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86/hlcgx86.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86/itcpugas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86/itx86int.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
