* Codepage-aware, allow unicode, refactoring of SQLDB code, add PG connector
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@39381 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -3470,6 +3470,7 @@ packages/fpindexer/src/ireaderhtml.pp svn_mime_002dtype=text%2Fplain svn_eol_002
 packages/fpindexer/src/ireaderpas.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fpindexer/src/ireadertxt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fpindexer/src/memindexdb.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/fpindexer/src/pgindexdb.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fpindexer/src/sqldbindexdb.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fpindexer/src/sqliteindexdb.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
