* Add unicode version of the regexpr unit, from same source
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@39418 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -7459,6 +7459,7 @@ packages/regexpr/src/old/regexpr.pp svn_mime_002dtype=text%2Fplain svn_eol_002ds
 packages/regexpr/src/oldregexpr.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/regexpr/src/regex.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/regexpr/src/regexpr.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+packages/regexpr/src/uregexpr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rexx/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rexx/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rexx/Makefile.fpc.fpcmake svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
