--- a/.gitattributes
+++ b/.gitattributes
@@ -7457,6 +7457,7 @@ packages/regexpr/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=n
 packages/regexpr/Makefile.fpc.fpcmake svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/regexpr/examples/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/regexpr/examples/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/regexpr/examples/demowd.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/regexpr/examples/splitwords.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/regexpr/examples/splitwords.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/regexpr/examples/testreg1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
