--- a/.gitattributes
+++ b/.gitattributes
@@ -10447,6 +10447,8 @@ rtl/sparc64/stringss.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/buildrtl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/symbian/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/symbian/dos.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/rtldefs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/symbian.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/symbianinc/e32def.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -10458,6 +10460,8 @@ rtl/symbian/sysheap.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/sysos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/sysosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/symbian/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/symbian/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/uiq.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/uiqclasses.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/uiqinc/qikapplication.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
