--- a/.gitattributes
+++ b/.gitattributes
@@ -13205,6 +13205,7 @@ tests/test/tgeneric101.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=nati
 tests/test/tgeneric102.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tgeneric103.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tgeneric104.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tgeneric105.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tgeneric11.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tgeneric12.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tgeneric13.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
